css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Red+Rose&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Red+Rose&family=Signika+Negative:wght@600&display=swap');

body {
    margin: 0;
}

.wrapper {
    display: grid;
    height: 100vh;
    width: 100%;
    grid-template-columns: 1fr;
    grid-template-rows: 20vh 65vh 15vh;
    grid-template-areas: 
    "headerarea"
    "contentarea"
    "footerarea";       
}

.projectwrapper {
    display: grid;
    height: 285vh;
    width: 100%;
    grid-template-columns: 1fr;
    grid-template-rows: 20vh 250vh 15vh;
    grid-template-areas: 
    "headerarea"
    "contentarea"
    "footerarea";       
}

.aboutmewrapper {
    display: grid;
    height: 110vh;
    width: 100%;
    grid-template-columns: 1fr;
    grid-template-rows: 20vh 75vh 15vh;
    grid-template-areas: 
    "headerarea"
    "contentarea"
    "footerarea";       
}

.headerarea {
    grid-area: headerarea;
    display: flex; 
    padding: 10px;
    align-items: flex-start;
    justify-content: space-between;
    font-family: 'Red Rose', cursive;
    font-size: calc(20px + .5vw);
    color: #1e011f;
    background-color: #f9d7ff;
}

.contentarea {
    grid-area: contentarea;
    padding: 15px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: #fcf6fc;
    align-items: center;
}

.homecontentarea {
    grid-area: contentarea;
    padding: 15px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: #fcf6fc;
    align-items: center;
    justify-content: center;
}

.aboutmecontentarea {
    grid-area: contentarea;
    padding: 15px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: #fcf6fc;
    align-items: center;
}

.projectcontentarea {
    grid-area: contentarea;
    padding: 15px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: #fcf6fc;
    align-items: center;
}

.footerarea {
    grid-area: footerarea;
    display: flex; 
    align-items: baseline;
    padding:10px;
    justify-content: space-between;
    font-family: 'Red Rose', cursive;
    font-size: calc(10px + .5vw);
    color: #1e011f;
    background-color: #f9d7ff;
}

#iconimg {
    max-height: 80%;
    max-width: auto;
    border-radius: 50%;
    margin-top: 10px;
}

.navbar {
    background-color: #f9d7ff;
    border-radius: 7px;
}

.nav-item{
    font-family: 'Red Rose', cursive;
    font-size: 1rem;
    background-color: #fcf6fc;
    border-radius: 10px;
    text-align: center;
    margin: 6px;
  }

.nav-link {
    color: #1e011f;
}

p {
    font-family: 'Red Rose', cursive;
    font-family: 'Signika Negative', sans-serif;
    text-align: center;
    font-size: .9rem;
}

ul {
    list-style: none;
}
 
h1 {
    font-family: 'Red Rose', cursive;
    text-align: center;
    margin-top: 20px;

}

h2 {
    font-family: 'Red Rose', cursive;
    text-align: center;
    margin-top: 10px;
}

.break {
    flex-basis: 100%;
    height: 0;
}

.rectangle {
    height: auto;
    width: auto;
    border-radius: 10px;
    background-color: #1e011f;
    color:#fcf6fc;
    text-align: center;
    font-size: .9rem;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 3px;
    margin-bottom: 3px;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
  }

#financeapp {
    max-height: 25%;
    align-self: center;
}

#skills {
    display: flex; 
    flex-wrap: wrap;
}

#weatherapp {
    max-height: 12%;
    align-self: center;
}

#nonograms {
    max-height: 15%;
    align-self: center;
}

hr {
    margin-bottom: 20px;
    width: 85%;
}

#megan { 
    margin-left: auto;
    align-self: flex-end;
}

a {
    font-family: 'Red Rose', cursive;
    font-family: 'Signika Negative', sans-serif;
    font-size:.8rem;
}

@media screen and (min-width: 900px) {
    .projectwrapper {
        display: grid;
        height: 255vh;
        width: 100%;
        grid-template-columns: 1fr;
        grid-template-rows: 20vh 220vh 15vh;
        grid-template-areas: 
        "headerarea"
        "contentarea"
        "footerarea";       
    }
    
    .projectcontentarea{
        flex-direction: row;
        padding: 5%;
        justify-content: center;
    }

    #h1item {
        width: 100%;
    }

    .project {
        width:60%;
        margin: 10px;
    }

    .project2 {
        width:40%;
        margin: 10px;
    }

    hr {
        width: 85%;
        margin-left: auto;
        margin-right: auto;
    }

    iframe {
        max-width: 560;
        max-height: 315;
        margin: 10px;
    }

    #weatherapp {
        max-width: 400px;
        max-height: 100%;
        margin: 10px;
    }

    #nonograms {
        max-width: 400px;
        max-height: 100%;
        margin: 10px;
    }

    .aboutmecontentarea {
        flex-direction: row;
        justify-content: space-around;
    }

    #abtme {
        max-width: 45%;
    }

}

